# bundesnetzagentur-automation

./: .gitignore  Makefile  README.md  configuration_schema.json  pyproject.toml
bundesnetzagentur_automation/: __init__.py  configuration.schema.json
