[project]
name = "bundesnetzagentur-automation"
version = "0.1.0"
description = ""
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "helium == 3.2.6",
    "importlib-resources>=6.4.5",
    "jsonschema == 4.19.2",
    "typer == 0.9.0",
]

[project.scripts]
bundesnetzagentur-automation = 'bundesnetzagentur_automation:app'

[project.optional-dependencies]
dev = [
    "mypy == 1.8.0",
    "black == 23.12.1",
    "isort == 5.13.2",
    "types-jsonschema == 4.20.0.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.3",
]
