[project]
name = "bundesnetzagentur-automation"
version = "0.1.0"
description = ""
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "helium>=5.1.0",
    "importlib-resources>=6.5.2",
    "jsonschema>=4.23.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.9.5",
    "types-jsonschema>=4.20.0.0",
]

[project.scripts]
bundesnetzagentur-automation = 'bundesnetzagentur_automation:app'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
