[project]
name = "bundesnetzagentur-automation"
version = "0.1.0"
description = ""
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "helium>=5.1.0",
    "importlib-resources>=6.5.2",
    "pydantic>=2.11.5",
    "pydantic-yaml>=1.5.1",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.9.5",
]

[project.scripts]
bundesnetzagentur-automation = 'bundesnetzagentur_automation:app'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
src = ["dev_conferences_website"]
target-version = "py39"
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN", "COM812", "D107", "ISC001", "T201"]

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.mypy]
ignore_missing_imports = true
